--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -57,6 +57,9 @@
         </button>
       </form>
     </div>
+    <div id="overlay">
+      <div id="overlayContent"></div>
+    </div>
     <script src="../js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
