--- a/src/web/html/loading.html
+++ b/src/web/html/loading.html
@@ -11,40 +11,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
     <title>Loading</title>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .loading {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      svg {
-        width: 100%;
-        height: 100%;
-      }
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(255, 255, 255, 0);
-        z-index: 10;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="../css/loading.css" />
   </head>
   <body>
     <div class="loading">
@@ -54,75 +23,7 @@
         xmlns:xlink="http://www.w3.org/1999/xlink"
         viewBox="0 0 1080 1080"
         preserveAspectRatio="xMidYMid meet">
-        <defs id="defs4">
-          <style>
-            .animatebounce {
-              animation: bounce 3s infinite;
-            }
-            .square1 {
-              animation-delay: 0s;
-              --offset1: 0px;
-              --offset2: 15px;
-            }
-            .square2 {
-              animation-delay: 0.1s;
-              --offset1: 25px;
-              --offset2: -5px;
-            }
-            .square3 {
-              animation-delay: 0.15s;
-              --offset1: -5px;
-              --offset2: 15px;
-            }
-            .square4 {
-              animation-delay: 0.2s;
-              --offset1: 15px;
-              --offset2: 20px;
-            }
-            @keyframes bounce {
-              0% {
-                transform: translateY(0) rotate(0);
-                animation-timing-function: ease-in;
-              }
-              20% {
-                transform: translateY(calc(-60px - var(--offset1))) rotate(90deg);
-                animation-timing-function: linear;
-              }
-              30% {
-                transform: translateY(0) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              40% {
-                transform: translateY(-15px) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              48% {
-                transform: translateY(0) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              52% {
-                transform: translateY(0) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              60% {
-                transform: translateY(calc(-60px - var(--offset2))) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              80% {
-                transform: translateY(0) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              90% {
-                transform: translateY(-15px) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-              100% {
-                transform: translateY(0) rotate(180deg);
-                animation-timing-function: ease-in-out;
-              }
-            }
-          </style>
-        </defs>
+        <defs></defs>
         <text
           x="50%"
           y="60%"
@@ -245,24 +146,6 @@
         </g>
       </svg>
     </div>
-    <script>
-      function checkStatus() {
-        fetch('/post.json')
-          .then((response) => response.json())
-          .then((data) => {
-            // Check if all items have 'Run' set to '0'
-            if (data.data.every((item) => item.Run === '0')) {
-              window.location.href = '/';
-            } else {
-              setTimeout(checkStatus, 1000); // Check again after 1 second
-            }
-          })
-          .catch((error) => console.error('Error:', error));
-      }
-
-      window.onload = function () {
-        checkStatus();
-      };
-    </script>
+    <script src="../js/loading.js"></script>
   </body>
 </html>
