--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -57,8 +57,19 @@
         </button>
       </form>
     </div>
-    <div id="overlay">
-      <div id="overlayContent"></div>
+    <div
+      id="overlay"
+      class="overlay">
+      <div
+        id="overlayContent"
+        class="overlay-content"></div>
+      <div
+        id="secondaryOverlay"
+        class="overlay">
+        <div
+          id="secondaryOverlayContent"
+          class="overlay-content"></div>
+      </div>
     </div>
     <script src="../js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
