--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -70,6 +70,13 @@
           id="secondaryOverlayContent"
           class="overlay-content"></div>
       </div>
+      <div
+        id="infoOverlay"
+        class="overlay">
+        <div
+          id="infoOverlayContent"
+          class="overlay-content"></div>
+      </div>
     </div>
     <script src="../js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
