--- a/src/web/html/loading.html
+++ b/src/web/html/loading.html
@@ -26,18 +26,18 @@
         <defs></defs>
         <text
           x="50%"
-          y="60%"
+          y="95%"
           text-anchor="middle"
           font-family="Arial-BoldMT, Arial"
-          font-size="63"
+          font-size="150"
           fill="#03234B">
           Generation on going
         </text>
         <g>
           <circle
-            cx="78%"
-            cy="59.5%"
-            r="5"
+            cx="115%"
+            cy="94.5%"
+            r="9"
             fill="#03234B">
             <animate
               attributeName="opacity"
@@ -47,9 +47,9 @@
               begin="2s" />
           </circle>
           <circle
-            cx="80%"
-            cy="59.5%"
-            r="5"
+            cx="118%"
+            cy="94.5%"
+            r="9"
             fill="#03234B">
             <animate
               attributeName="opacity"
@@ -59,9 +59,9 @@
               begin="1s" />
           </circle>
           <circle
-            cx="82%"
-            cy="59.5%"
-            r="5"
+            cx="121%"
+            cy="94.5%"
+            r="9"
             fill="#03234B">
             <animate
               attributeName="opacity"
@@ -73,7 +73,7 @@
         </g>
         <g clip-path="url(#__lottie_element_6450)">
           <g
-            transform="matrix(4,0,0,4,250,500)"
+            transform="matrix(8,0,0,8,-100,770)"
             opacity="1"
             style="display: block">
             <g
@@ -87,7 +87,7 @@
             </g>
           </g>
           <g
-            transform="matrix(4,0,0,4,400,500)"
+            transform="matrix(8,0,0,8,200,770)"
             opacity="1"
             style="display: block">
             <g
@@ -101,7 +101,7 @@
             </g>
           </g>
           <g
-            transform="matrix(4,0,0,4,550,500)"
+            transform="matrix(8,0,0,8,500,770)"
             opacity="1"
             style="display: block">
             <g
@@ -115,7 +115,7 @@
             </g>
           </g>
           <g
-            transform="matrix(4,0,0,4,700,500)"
+            transform="matrix(8,0,0,8,800,770)"
             opacity="1"
             style="mix-blend-mode: screen; display: block">
             <g
@@ -130,7 +130,7 @@
             </g>
           </g>
           <g
-            transform="matrix(4,0,0,4,850,500)"
+            transform="matrix(8,0,0,8,1100,770)"
             opacity="1"
             style="display: block">
             <g
@@ -146,6 +146,7 @@
         </g>
       </svg>
     </div>
+    <div class="log-container" id="log-container"></div>
     <script src="../js/loading.js"></script>
   </body>
 </html>
